exports[`auth should return changePassword actions 1`] = `
Object {
  "payload": Object {
    "new1": undefined,
    "new2": undefined,
    "old": undefined,
  },
  "type": "mcs-lite-mobile-web/auth/CHANGE_PASSWORD",
}
`;

exports[`auth should return clear actions 1`] = `
Object {
  "type": "mcs-lite-mobile-web/auth/CLEAR",
}
`;

exports[`auth should return requireAuth actions 1`] = `
Object {
  "type": "mcs-lite-mobile-web/auth/REQUIRE_AUTH",
}
`;

exports[`auth should return setUserInfo actions 1`] = `
Object {
  "payload": "payload",
  "type": "mcs-lite-mobile-web/auth/SET_USERINFO",
}
`;

exports[`auth should return signout actions 1`] = `
Object {
  "type": "mcs-lite-mobile-web/auth/SIGNOUT",
}
`;

exports[`auth should return tryEnter actions 1`] = `
Object {
  "type": "mcs-lite-mobile-web/auth/TRY_ENTER",
}
`;
